--- a/src/atc/atc.html
+++ b/src/atc/atc.html
@@ -40,10 +40,10 @@
         <br>
 
 
-        <form action="#" method="dialog" id="atcform">
+        <form action="#" method="dialog">
             <div class="col-auto"><label class="form-label">ICAO: </label></div>
             <div class="col-auto">
-                <input type="text" name="icao" class="form-control" id="icao" placeholder="LFBL">
+                <input type="text" name="icao" class="form-control" id="icao" placeholder="LFBL" onfocus="this.value;">
                 <input type="submit" id="platforme" class="btn btn-primary mt-2"></button>
             </div>
         </form>
