update version Final version 1.1.7

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -44,7 +44,7 @@
                 <div class="col">
 
                     <h5></h5>
-                    <a href="../atc/atc.html"><button type="button" class="btn btn-info btn-sm">ATC</button></a>
+                    <a href="./../atc/atc.html"><button type="button" class="btn btn-info btn-sm">ATC</button></a>
                     <button type="button" disabled class="btn btn-success btn-sm" data-bs-toggle="tooltip"
                         data-bs-placement="top" title="Tooltip on top">Pilot</button>
                     <button type="button" class="btn btn-dark btn-sm" id="friendbutton">Friend</button>
@@ -56,7 +56,7 @@
 
 
             <!-- Bootstrap core JavaScript -->
-            <script src="index.js"></script>
+            <script src="./index.js"></script>
 </body>
 
 </html>
