--- a/src/atc/atc.html
+++ b/src/atc/atc.html
@@ -138,7 +138,7 @@
 
 
         <!-- Bootstrap core JavaScript -->
-        <script src="atc.js"></script>
+        <script src="./atc.js"></script>
 
 </body>
 
